Adicionado a função de Login anonimo

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,7 @@
 <script src="/firebase-config.js"></script>
 <script src="/app.js"></script>
 <script src="/components/home/home.js"></script>
+<script src="/components/security/login.js"></script>
+<script src="/components/security/auth.js"></script>
 </body>
 </html>
